--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <link rel="stylesheet" href="style.css">
 
-    <title>E-Commerce Website</title>
+    <title>VISHAL-BRAND</title>
 </head>
 
 <body>
@@ -22,7 +22,7 @@
         <div class="container">
             <a class="navbar-brand d-flex align-item-center justify-content-center" href="#"><img
                     src="Images/shopping-bag-icon.png" class="bg-white d-none d-sm-block attireimg" alt=""><span
-                    class="text-uppercase px-3 navbarbtn">Attire</span></a>
+                    class="text-uppercase px-3 navbarbtn">Vishal brand</span></a>
             <div class="d-flex justify-content-center align-item-center order-lg-2 ms-auto carticons">
                 <button class="btn cartitems"><span><i
                             class="fa fa-shopping-cart text-white iconbtn"></i></span></button>
@@ -70,7 +70,7 @@
                 <div class="carousel-item carousel-image bg-img-1 active">
                     <img src="Images/banner5.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption">
-                        <h1 class="fw-bold text-uppercase">best collection</h1>
+                        <h1 class="fw-bold text-uppercase">best collection At Vishal Brand</h1>
                         <p class="carouselP">We all need a splash of bad taste it's hearty, it's healthy, it's
                             physical.<br>
                             You can choose from a variety of neckline dresses, sparkle dresses,<br> and evening dresses
@@ -456,13 +456,12 @@
             <div class="about-section-image d-sm-flex align-items-center justify-content-between py-5">
                 <div>
                     <p class="about-section-para">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto quod quia ab dignissimos
-                        illum quae.
+                        At Vishal Brand, we're dedicated to revolutionizing your shopping experience. With a focus on quality and customer satisfaction, we curate a diverse range of products to meet your every need. Our commitment to innovation drives us to continually enhance your online shopping journey. Trust in our expertise and join thousands of satisfied customers who rely on us for premium goods and impeccable service. Welcome to the future of e-commerce with Vishal brand
                         <br>
                         <br>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed aspernatur, numquam dicta
+                        <!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed aspernatur, numquam dicta
                         laboriosam id quo adipisci, quisquam possimus nemo, tempora suscipit repellat provident. Dolores
-                        accusamus adipisci quaerat nemo eveniet? Vel.
+                        accusamus adipisci quaerat nemo eveniet? Vel. -->
                     </p>
                 </div>
                 <img class="img-fluid w-50 d-none d-sm-block" src="Images/about_us.jpg" alt="">
@@ -570,10 +569,7 @@
                 </h2>
             </div>
             <div class="newsletter-para py-5">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit quam aut inventore necessitatibus nihil
-                qui perspiciatis doloribus cupiditate nam. Consequuntur optio, dolorum sapiente aut fugiat voluptatibus
-                suscipit quis debitis eum deleniti labore accusantium molestias vitae esse beatae iste nesciunt
-                voluptatem quae ipsum quo eveniet! Debitis qui exercitationem fugiat nostrum laudantium.
+                Subscribe to our newsletter for exclusive offers, updates, and discounts on your favorite products! Stay informed about the latest trends and arrivals straight to your inbox. Join our community and be the first to know about exciting promotions and events. Simply enter your email address and click subscribe to start receiving our newsletter today! Don't miss out - sign up now for a world of shopping benefits!
             </div>
             <div class="newsletter-input input-group news-input w-50 mx-auto">
                 <input type="text" class="form-control" placeholder="Enter Your Email">
@@ -587,12 +583,7 @@
             <div class="row">
                 <div class="col-md-6 col-lg-3 py-3">
                     <h3 class="text-decoration-none navbar-brand text-uppercase">Attire</h3>
-                    <p class="pt-4 text-white text-muted">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                        Facere quidem
-                        aspernatur fuga blanditiis commodi. Deleniti eius dolores ad necessitatibus id sunt
-                        reiciendis esse tenetur, culpa, reprehenderit natus, obcaecati soluta praesentium! Harum
-                        nemo quidem atque fugit veniam, deserunt, saepe maiores aspernatur ipsam fugiat eos commodi
-                        officiis illo corporis aliquid quam alias?</p>
+                    <p class="pt-4 text-white text-muted">Discover unparalleled style and functionality with our latest collection. Crafted with precision and designed for modern living, each item exudes elegance and practicality. Elevate your everyday routine with our premium selection, meticulously curated to meet your unique needs. From sleek designs to durable materials, our products offer the perfect blend of form and function. Shop now and experience luxury redefined at Vishal Brand?</p>
                 </div>
 
                 <div class="col-md-6 col-lg-3 py-3">
@@ -629,15 +620,15 @@
                     <h5 class="fw-light pb-4 navbar-brand">Contact Us</h5>
                     <div class="d-flex justify-content-start align-items-start my-2 text-muted">
                         <span class="me-3"><i class="fas fa-map-marked-alt"></i></span>
-                        <span class="fw-light">New York, United States Of America</span>
+                        <span class="fw-light">Pune, Maharshtra, india</span>
                     </div>
                     <div class="d-flex justify-content-start align-items-start my-2 text-muted">
                         <span class="me-3"><i class="fas fa-envelope"></i></span>
-                        <span class="fw-light">attiresupport@email.com</span>
+                        <span class="fw-light">mahajanvr2902@email.com</span>
                     </div>
                     <div class="d-flex justify-content-start align-items-start my-2 text-muted">
                         <span class="me-3"><i class="fas fa-phone-alt"></i></span>
-                        <span class="fw-light">555-666-777</span>
+                        <span class="fw-light">8459521789</span>
                     </div>
                 </div>
 
